# am_extruder_tool

./: .gitmodules  CMakeLists.txt  README.md  am_extruder_tool_hardware.xml  package.xml
config/: extruder_controllers.yaml
description/: am_extruder_tool.urdf.xacro  am_extruder_tool_actuator.ros2_control.xacro  am_extruder_tool_example.urdf.xacro
include/am_extruder_tool/: AMExtruderHardware.hpp
launch/: am_extruder_tool_example.launch.py
model/: extruder_to_franka_mount_v1.stl  extruder_to_franka_mount_v1.stp  extruder_to_franka_mount_v2.stl  extruder_to_franka_mount_v2.stp
src/: AMExtruderComNode.cpp  AMExtruderHardware.cpp
