<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>am_extruder_tool</name>
  <version>0.1.0</version>
  <description>Custom additive manufacturing plastic extruder.</description>
  <maintainer email="andreas.h.moltumyr@ntnu.no">Moltumyr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_py</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>ros2_controllers</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
